images/k8syamls/autopod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ashuwebapp1
  name: ashuwebapp1 # name of pod 
spec:
  containers:
  - image: dockerashu/ashucustomer:v1 # name of image
    name: ashuwebapp1 # container name 
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
