images/k8syamls/newwebpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels: # label of my pod 
    run: ashuwebapp # label of pod 
  name: ashuwebapp # name of pod 
spec:
  containers:
  - image: dockerashu/ashuapp:mobiv1
    name: ashuwebapp
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
