images/k8syamls/task1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ashutoshhpod1
spec:
  containers:
  - name: ashucc11
    image: busybox 
    command: ['sh','-c','ping fb.com']
