images/k8syamls/task11.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ashuweb
  name: ashuweb
  namespace: tasks  # namespace info 
spec:
  nodeName: node2 # static scheduling 
  containers:
  - image: httpd
    name: ashuweb
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
