images/k8syamls/webpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels: # this is kind of stamp for my pods 
    x: ashuapps  # HERE key is x and value is ashuapps 
  name: ashuwebpod
spec:
  containers:
  - image: dockerashu/ashuapp:mobiv1
    name: ashuwebpod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
