images/k8syamls/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashulb1
  name: ashulb1 # name of service 
spec:
  ports:
  - name: 1234-80
    port: 1234 # internal service port number 
    protocol: TCP
    targetPort: 80 # pod app port 
  selector: # job of selector to find the pod using label 
    x: ashuapps # label of my pods 
  type: NodePort # type of service 
status:
  loadBalancer: {}
